[core] jmh benchmarks yak shaving
+ recordSize param for PersistentFSStoragesBenchmarks
+ isolate different TreeAccessor's benchmarks

GitOrigin-RevId: 1384b03b3685ab3596542017f9fd9ff033f8cf7e